--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -220,9 +220,9 @@
 
 	/* About Section
    -------------------------------------------------------------------- */
-	#about .profile-pic {
+	/* #about .profile-pic {
 		display: none;
-	}
+	} */
 	#about .download .button {
 		width: 100%;
 		text-align: center;
@@ -230,6 +230,9 @@
 	}
 	#about .main-col {
 		padding-right: 30px;
+	}
+	#about .three {
+		text-align: center;
 	}
 
 	/* Resume Section
